# Stenotrophomonas_causal-AI

./: .gitignore  README_FINAL.txt  analyze_flux_fixed_model.py  export_all_reactions.py  local_validate_holdout.py  run_final_predictions.sh  run_holdout_predictions.py  run_sensitivity.py
acetate_xai/: .gitignore  README.md  pyproject.toml
acetate_xai/configs/: anchors.yaml  medium_base.yaml  regime_exchanges.yaml  targets_120.json  targets_300.json
acetate_xai/data/: conditions_experiment.csv  conditions_experiment_example.csv
acetate_xai/docs/: PROJECT_SUMMARY.md  RESULTS_TREE.txt  atpm_calibration_notes.md  dense_fva_light_commands.md  random_lhs_campaign_commands.md  rxnfix_commands.md  xgb_shap_commands.md
acetate_xai/scripts/: audit_exchange_ids.py  build_causal_dataset.py  build_regime_dataset.py  build_results_summary.py  calibrate_atpm_from_anchors.py  collect_fva_parts.py  collect_latest_figures.py  collect_latest_figures_data.py  export_shap_topk.py  make_fig02a_experiment_anchors.py  make_fig03_beeswarm_v2.py  make_fig04_beeswarm_v2.py  make_fig04_beeswarm_v3.py  make_fig04_beeswarm_v4_jittered.py  make_paper_figures.py  plot_causal_dag.py  plot_regime_map.py  recreate_fig02e_best_run.py  run_campaign_atpm_calibrated.py  run_causal_discovery.py  run_dense_fva_light.py  run_fba_regime.py  run_fba_regime_rxnfix.py  run_fva_batch.py  run_fva_batch_frac.py  run_fva_batch_rxnfix.py  run_fva_one.py  run_random_lhs_campaign.py  run_random_lhs_campaign_v2.py  select_targets.py  summarize_platform_results.py  train_maintenance_xai.py  train_regime_xai.py  (+4 more)
(+303 files in other folders)
